index.html - added new class to align puzzle info button to puzzle image/canvas styles.css - changed font settings, added css for new puzzle-image-wrapper class, aligned canvas to image, updated clue area in many ways script.js - added clue note box to clue-text class so it will always be under clues, added code to ensure it disappears when empty

--- a/variety-solver/styles.css
+++ b/variety-solver/styles.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     height: 100vh;
     overflow: hidden;
+    font-size: 1.4em;
 }
 
 #puzzle-container {
@@ -32,14 +33,20 @@ body {
     flex: 1; /* Allow it to take up available space */
 }
 
+.puzzle-image-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
 #puzzle-image {
     display: block;
 }
 
 #canvas {
+    display: block;
     position: absolute;
-    top: 0;
-    left: 0;
 }
 
 /** Metadata display **/
@@ -58,7 +65,7 @@ h2.clues-title {
 #clue-panels {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 500px;
     height: 100%; /* Take up the full height of the container */
     margin-left: 20px;
 }
@@ -73,19 +80,19 @@ h2.clues-title {
 }
 
 /* no bullets on clue lists */
-ul.clue-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.clue-list {
+    margin-top: 0;
+    padding: 0;
 }
 
 /* Space between clues */
-li.clue-item {
+.clue-item {
     margin-bottom: 5px;
     cursor: pointer;
+    display: flex;
 }
 
-li.clue-item:hover {
+.clue-item:hover {
     background-color: lightgray; /* Change background on hover */
 }
 
@@ -99,11 +106,16 @@ li.clue-item:hover {
 /* Bold the clue numbers */
 .clue-number {
   font-weight: 600;
-  margin-right: 5px;
+  margin-right: 0.7rem;
+  text-align: right;
+  min-width: 1.7rem;
 }
 
 /* Placeholder for clue text */
 .clue-text {
+    flex: 1 1 auto;
+    word-wrap: break-word;
+    margin-right: 0.6rem;
 }
 
 /* Clue explanations */
